[gd_scene load_steps=10 format=3 uid="uid://d4dfde0pxblf3"]

[ext_resource type="Script" uid="uid://cvcmvsxth1ptr" path="res://entity/entity.gd" id="1_lf542"]
[ext_resource type="Texture2D" uid="uid://b1w0b44xf48hv" path="res://Sprout Lands - Sprites - Basic pack/Sprout Lands - Sprites - Basic pack/Characters/Free Cow Sprites.png" id="2_jc0kx"]

[sub_resource type="SphereShape3D" id="SphereShape3D_akc3n"]
radius = 0.10769278

[sub_resource type="Animation" id="Animation_cfx20"]
resource_name = "cow_walk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_v200u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_mckvm"]
resource_name = "cow_attack"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(12, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_htho8"]
_data = {
&"RESET": SubResource("Animation_v200u"),
&"cow_attack": SubResource("Animation_mckvm"),
&"cow_walk": SubResource("Animation_cfx20")
}

[sub_resource type="NavigationMesh" id="NavigationMesh_jc0kx"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_mckvm"]
height = 0.23535156
radius = 0.6220703

[node name="entity" type="Node3D"]
script = ExtResource("1_lf542")

[node name="Sprite3D" type="Sprite3D" parent="."]
billboard = 1
texture_filter = 0
texture = ExtResource("2_jc0kx")
hframes = 3
vframes = 2

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_akc3n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_htho8")
}

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_jc0kx")

[node name="death_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="recognize" type="Area3D" parent="."]
collision_layer = 64
collision_mask = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="recognize"]
shape = SubResource("CylinderShape3D_mckvm")

[node name="attack_timer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="area_entered" from="recognize" to="." method="_on_recognize_area_entered"]
[connection signal="area_exited" from="recognize" to="." method="_on_recognize_area_exited"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
